--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -67,7 +67,7 @@ jobs:
    
     - name: Build app (fix)
       run: |
-        xcodebuild clean archive -workspace  ./ios/rn3d.xcworkspace -scheme rn3d  -archivePath ./ios/build/export.xcarchive  -showBuildTimingSummary MARKETING_VERSION=0.0.${{ steps.IOSVERSION.outputs.build_number }}  CURRENT_PROJECT_VERSION=${{ steps.IOSbuild.outputs.build_number }}   archive
+        xcodebuild clean archive -workspace  ./ios/rn3d.xcworkspace -scheme rn3d -configuration Release   -archivePath ./ios/build/export.xcarchive  -showBuildTimingSummary MARKETING_VERSION=0.0.${{ steps.IOSVERSION.outputs.build_number }}  CURRENT_PROJECT_VERSION=`${{ steps.IOSbuild.outputs.build_number }}`   archive
 #        xcodebuild clean archive -workspace  ./ios/rn3d.xcworkspace -scheme rn3d  -archivePath ./ios/build/export.xcarchive  -showBuildTimingSummary CURRENT_PROJECT_VERSION="1"   archive
 #            xcodebuild archive  -scheme rn3d  -sdk iphoneos -configuration Release -archivePath ../build/export     -showBuildTimingSummary     CURRENT_PROJECT_VERSION="41"   archive
  #     xcodebuild archive -scheme exp001  -sdk iphoneos  -configuration Release -archivePath /Users/sddivid/Documents/key/ios/9:3xcode/export    -showBuildTimingSummary CURRENT_PROJECT_VERSION="41"   archive 
